# claude-code-inspector

./: .gitignore  README.md
.claude/: settings.json.example
analysis/: __init__.py  agent_tracker.py  entity_deduplicator.py  extract_all_entities.py
analysis/scripts/: analyze_root_agents.py  check_tool_spawns.py
docs/: AGENT_WORKFLOW_TRACKING.md  LOG_ANALYSIS.md
proxy/: .env.example  .gitignore  README.md  log_api.py  log_classifier.py  proxy_server.py  pyproject.toml  test_streaming.py  workflow_graph.py
proxy/viewer/: AGENT_VIZ_README.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js  workflow_tree_viz.html
proxy/viewer/src/: AgentGanttPanel.css  AgentGanttPanel.jsx  App.css  App.jsx  MessagesModal.css  MessagesModal.jsx  SearchBar.jsx  StatsPanel.css  StatsPanel.jsx  TimelinePanel.css  TimelinePanel.jsx  WorkflowPanel.css  WorkflowPanel.jsx  index.css
scripts/: SYSTEM_PROMPTS_SUMMARY.md  analyze_system_prompts.py  check_spawn_bug.py  extract_all_tools.py  parse_tools.py  system_prompts_analysis.json  test_hash_match.py  tools_extracted.json  verify_examples.py
